# ccdr-explorer-client

./: .env.example  .gitignore  LICENSE  README.md  README.qmd  _quarto.yml  deploy.py  docker-compose.yml  gulpfile.js  index.qmd  main.py  models.py  pyproject.toml  utils.py
.github/workflows/: publish.yml  test.yml
README_files/libs/bootstrap/: bootstrap.min.css
docs/: architecture.qmd  authentication.qmd  contributing.qmd  customization.qmd  deployment.qmd  documentation.qmd  index.qmd  installation.qmd  templates.qmd
docs/static/: documentation.txt  llms.txt
exceptions/: exceptions.py  http_exceptions.py
migrations/: set_up_db.py
routers/: about.py  account.py  auth.py  authentication.py  browse.py  chat.py  dashboard.py  files.py  invitation.py  invitations.py  organization.py  privacy_policy.py  role.py  static_pages.py  terms_of_service.py  user.py
static/: results-carousel.js  stream-md.js
static/css/: extras.css  styles.css
templates/: about.html  base.html  index.html
templates/account/: auth_base.html  forgot_password.html  login.html  register.html  reset_password.html
templates/authentication/: forgot_password.html  login.html  register.html  reset_password.html
templates/base/macros/: logo.html  silhouette.html  text_logo.html
templates/base/partials/: footer.html  header.html  nav.html
templates/browse/: document_options.html  index.html
templates/chat/: assistant-run.html  assistant-step.html  context-result.html  file-viewer.html  index.html  loading-dots.html  network_error.html  search-results-widget.html  user-message.html  weather-widget.html
templates/components/: footer.html  header.html  logo.html  nav.html  organizations.html  silhouette.html
templates/dashboard/: assistant-run.html  organization_overview.html
templates/dashboard/organizations/: members.html
templates/emails/: base_email.html  organization_invite.html  reset_email.html  update_email_email.html
templates/errors/: error.html  validation_error.html
templates/organization/: organization.html
templates/organization/modals/: delete_organization_modal.html  edit_organization_modal.html  (+2 more)
templates/static_pages/: privacy_policy.html  terms_of_service.html
templates/users/: organization.html  profile.html
tests/: __init__.py  conftest.py  form_submissions.jsonl  test_account.py  test_auth.py  test_authentication.py  test_db.py  test_dependencies.py  test_images.py  test_main.py  test_models.py  test_organization.py  test_role.py  test_templates.py  test_user.py
tests/routers/: __init__.py  test_account.py  test_invitation.py  test_invitation_acceptance.py  test_organization.py  test_role.py  test_static_pages.py  test_user.py
tests/utils/: __init__.py  test_auth.py  test_db.py  test_dependencies.py  test_images.py  test_models.py  test_sanitize.py
utils/: auth.py  db.py  dependencies.py  images.py  invitations.py  models.py  role_org.py
utils/chat/: conversations.py  custom_functions.py  files.py  function_calling.py  function_definitions.py  functions.py  models.py  prompt.py  semantic_search.py  sse.py  streaming.py  threads.py
utils/chatbot/: functions.py
utils/core/: auth.py  db.py  dependencies.py  enums.py  images.py  invitations.py  models.py
(+1 files in other folders)
