[project]
name = "ccdr-explorer-client"
version = "0.1.0"
description = "A web application for exploring the World Bank's Country Climate and Development Reports (CCDRs) with artificial intelligence and semantic search"
readme = "README.md"
package-mode = false
authors = [
    {name = "Sustainable Sovereign Debt Hub"},
    {name = "Teal Insights", email = "lte@tealinsights.com"},
    {name = "Promptly Technologies, LLC", email = "christopher.smith@promptlytechnologies.com"}
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "sqlmodel<1.0.0,>=0.0.22",
    "pyjwt<3.0.0,>=2.10.1",
    "jinja2<4.0.0,>=3.1.4",
    "uvicorn<1.0.0,>=0.32.0",
    "pydantic[email]<3.0.0,>=2.9.2",
    "python-multipart<1.0.0,>=0.0.17",
    "python-dotenv<2.0.0,>=1.0.1",
    "resend<3.0.0,>=2.4.0",
    "bcrypt<5.0.0,>=4.2.0",
    "fastapi<1.0.0,>=0.115.5",
    "pillow>=11.0.0",
    "openai>=1.72.0",
    "modal>=0.74.0",
    "boto3>=1.38.1",
    "psycopg2-binary>=2.9.10",
    "beautifulsoup4>=4.13.5",
    "pgvector>=0.4.1",
    "bleach>=6.2.0",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "sqlalchemy-schemadisplay<3.0,>=2.0",
    "mypy>=1.15.0",
    "boto3-stubs>=1.39.0",
    "ruff>=0.12.2",
    "types-bleach>=6.2.0.20250809",
    "ty>=0.0.1a20",
]
